fix: should fallback to index.html if not found

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ generated_*.go
 schema.graphql
 outline.json
 dae-wing
+daed
 
 # Database files
 *.db
@@ -14,6 +15,3 @@ dae-wing
 # vendor
 vendor/
 go-mod/
-
-# build
-build-dae-ebpf/
