--- a/.github/sync-upstream.yml
+++ b/.github/sync-upstream.yml
@@ -1,42 +1,22 @@
+#      _                          _
+#   __| | __ _  ___     __      _(_)_ __   __ _
+#  / _` |/ _` |/ _ \____\ \ /\ / / | '_ \ / _` |
+# | (_| | (_| |  __/_____\ V  V /| | | | | (_| |
+#  \__,_|\__,_|\___|      \_/\_/ |_|_| |_|\__, |
+#                                         |___/
+#
+# Copyright (C) 2023 @daeuniverse <https://github.com/daeuniverse>
+#
+# This is a open-source software, liscensed under the AGPL-3.0 License.
+# See /License for more information.
+
 name: Synchronize Upstream
 
 on:
   workflow_dispatch:
-    inputs:
-      dae-core-head:
-        type: string
-        required: true
-        default: main
-      dae-core-sync-message:
-        type: string
-        required: true
-        default: 'chore(sync): upgrade dae-core'
-      pr-branch:
-        type: string
-        required: true
-        default: sync-upstream
 
 jobs:
   sync-dae-core:
-    runs-on: ubuntu-latest
-    if: ${{ inputs.dae-core-head }}
-    steps:
-      - uses: actions/checkout@v3
-        with:
-          submodules: recursive
-          fetch-depth: 0
-          ref: main
-
-      - name: Sync dae-core upstream
-        run: |
-          git checkout origin/${{ inputs.dae-core-head }}
-        working-directory: dae-core
-
-      - name: Commit and push changes
-        run: |
-          git config user.name "daebot"
-          git config user.email "daebot@v2raya.org"
-          git checkout -b ${{ inputs.pr-branch }}
-          git add .
-          git commit -m "${{ inputs.dae-core-sync-message }}" --no-verify
-          git push -u origin ${{ inputs.pr-branch }}
+    uses: daeuniverse/ci-seed-jobs/.github/workflows/sync-upstream.yml@sync_seed_workflow
+    with:
+      submodule-name: dae-core
