--- a/.github/sync-upstream.yml
+++ b/.github/sync-upstream.yml
@@ -14,6 +14,10 @@ name: Synchronize Upstream
 
 on:
   workflow_dispatch:
+  # remove the following trigger once tested
+  push:
+    branch:
+      - sync_upstream
 
 jobs:
   sync-dae-core:
