--- a/.github/workflows/sync-upstream.yml
+++ b/.github/workflows/sync-upstream.yml
@@ -17,7 +17,7 @@ on:
 
 jobs:
   sync-dae-core:
-    uses: daeuniverse/ci-seed-jobs/.github/workflows/sync-upstream.yml@main
+    uses: daeuniverse/ci-seed-jobs/.github/workflows/sync-upstream.yml@master
     with:
       submodule-name: dae-core
     secrets: inherit
